--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "mocha": "^1.17.1",
     		"should": "^3.1.2"
     }
-  , "main": "index"
+  , "main": "app"
   , "engines": { "node": ">= 0.10.1" }
   , "scripts": {
         "test": "make test"
