--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {
     "express": "^3.0.1",
     "rethinkdb": "^1.11.0",
-    "grunt": "^0.4.2"
+    "grunt": "^0.4.2",
+    "express3-handlebars": "0.5.0"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
