--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
   "devDependencies": {
     "mocha": "^1.17.1",
     "should": "^3.1.2",
-    "grunt-mocha-test": "^0.9.0"
+    "grunt-mocha-test": "^0.9.0",
+    "browserify": "^3.24.11",
+    "grunt-browserify": "^1.3.0"
+
   },
   "main": "index",
   "engines": {
