--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "express": "^3.0.1",
     "rethinkdb": "^1.11.0",
     "grunt": "^0.4.2",
-    "express3-handlebars": "0.5.0"
+    "express3-handlebars": "0.5.0",
+    "handlebars": "~1.3.0",
+    "hbsfy": "~1.3.1"
   },
   "devDependencies": {
     "mocha": "^1.17.1",
@@ -34,7 +36,6 @@
     "grunt-mocha-test": "^0.9.0",
     "browserify": "^3.24.11",
     "grunt-browserify": "^1.3.0"
-
   },
   "main": "index",
   "engines": {
