--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "should": "~3.1.2",
     "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.24.11",
-    "grunt-browserify": "~1.3.0"
+    "grunt-browserify": "~1.3.0",
+    "grunt-contrib-watch": "~0.5.3"
   },
   "main": "index",
   "engines": {
