--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "grunt": "~0.4.2",
     "express3-handlebars": "0.5.0",
     "handlebars": "~1.3.0",
-    "hbsfy": "~1.3.1"
+    "hbsfy": "~1.3.1",
+    "moment": "~2.5.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
