--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.24.11",
     "grunt-browserify": "~1.3.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "grunt-contrib-compass": "~0.7.2"
   },
   "main": "index",
   "engines": {
