--- a/package.json
+++ b/package.json
@@ -40,13 +40,14 @@
     "browserify": "~3.24.11",
     "grunt-browserify": "~1.3.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.2"
+    "grunt-contrib-compass": "~0.7.2",
+    "sinon": "~1.1.0"
   },
   "main": "index",
   "engines": {
     "node": ">= 0.10.1"
   },
   "scripts": {
-    "test": "make test"
+    "test": "grunt tests"
   }
 }
