--- a/package.json
+++ b/package.json
@@ -28,10 +28,7 @@
     "express3-handlebars": "0.5.0",
     "handlebars": "~1.3.0",
     "hbsfy": "~1.3.1",
-    "moment": "~2.5.1",
-    "jquery": "^2.1.0",
-    "backbone": "^1.1.2",
-    "underscore": "^1.6.0"
+    "moment": "~2.5.1"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
