--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "grunt-browserify": "~1.3.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-compass": "~0.7.2",
-    "sinon": "~1.1.0"
+    "sinon": "~1.1.0",
+    "jsdom": "~0.10.1"
   },
   "main": "index",
   "engines": {
