--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-compass": "~0.7.2",
     "sinon": "~1.1.0",
-    "jsdom": "~0.10.1"
+    "jsdom": "git://github.com/bdickason/jsdom.git#master"
   },
   "main": "index",
   "engines": {
