--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ language: node_js
 node_js:
     - "0.11"
     - "0.10"
+
+cache:
+    directories:
+        - node_modules
+
 before_install: npm install -g grunt-cli
 install: npm install
-before_script: grunt
