--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,5 @@ cache:
     directories:
         - node_modules
 
-before_install: npm install -g grunt-cli
+before_install: npm install -g gulp
 install: npm install
