--- a/package.json
+++ b/package.json
@@ -33,19 +33,18 @@
   "devDependencies": {
     "mocha": "~1.17.1",
     "should": "~3.1.2",
-    "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.24.11",
-    "grunt-browserify": "~1.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.2",
     "sinon": "~1.1.0",
-    "jsdom": "git://github.com/bdickason/jsdom.git#master"
+    "jsdom": "git://github.com/bdickason/jsdom.git#master",
+    "gulp": "^3.5.5",
+    "watchify": "^0.6.1",
+    "vinyl-source-stream": "^0.1.1"
   },
   "main": "index",
   "engines": {
     "node": ">= 0.10.1"
   },
   "scripts": {
-    "test": "grunt tests"
+    "test": "gulp tests"
   }
 }
