--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "should": "~3.1.2",
     "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.33.0",
+    "grunt-cli": "~0.1.13",
     "grunt-browserify": "~1.3.0",
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-compass": "~0.7.2",
