--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
     "express3-handlebars": "0.5.0",
     "handlebars": "~1.3.0",
     "hbsfy": "~1.3.1",
-    "moment": "~2.5.1"
-  },
-  "devDependencies": {
-    "mocha": "~1.17.1",
-    "should": "~3.1.2",
+    "moment": "~2.5.1",
     "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.33.0",
     "grunt-cli": "~0.1.13",
     "grunt-browserify": "~1.3.0",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.2",
+    "grunt-contrib-compass": "~0.7.2"
+  },
+  "devDependencies": {
+    "mocha": "~1.17.1",
+    "should": "~3.1.2",
     "sinon": "~1.1.0",
     "jsdom": "git://github.com/bdickason/jsdom.git#master"
   },
