--- a/package.json
+++ b/package.json
@@ -24,17 +24,11 @@
   },
   "dependencies": {
     "express": "~3.0.1",
-    "grunt": "~0.4.2",
     "express3-handlebars": "0.5.0",
     "handlebars": "~1.3.0",
     "hbsfy": "~1.3.1",
     "moment": "~2.5.1",
-    "grunt-mocha-test": "~0.9.0",
     "browserify": "~3.33.0",
-    "grunt-cli": "~0.1.13",
-    "grunt-browserify": "~1.3.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-compass": "~0.7.2"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
@@ -47,7 +41,7 @@
     "node": ">= 0.10.1"
   },
   "scripts": {
-    "start": "grunt; node index.js",
+    "start": "make; node index.js",
     "test": "make build"
   }
 }
