--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "handlebars": "~1.3.0",
     "hbsfy": "~1.3.1",
     "moment": "~2.5.1",
-    "browserify": "~3.33.0",
+    "browserify": "~3.33.0"
   },
   "devDependencies": {
     "mocha": "~1.17.1",
